// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - assign_task tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Delegate the auth module work

⚙ Delegate
  │  agent: software-engineer
  │  task: Implement the auth module
  │  description: Build auth module
  └─ Done • 5 tools • 2.5k tokens • 15.0s
"
`;

exports[`ChatDisplay - assign_task tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Delegate the auth module work

⚙ Delegate
  │  agent: software-engineer
  │  task: Implement the auth module
  │  description: Build auth module
  └─ Running ...
"
`;
